# microcircuit-PD14-model

./: .readthedocs.yaml  CITATION  README.md  index.md  publications.bib
.github/workflows/: ModelDescription-ci.yml  publish.yml  test-publish.yml
PyNEST/: INSTALL.md  README.md  pyproject.toml  setup.py  tox.ini
PyNEST/examples/: README.md  run_microcircuit.py
PyNEST/reference_data/: analyze_reference_data.py
PyNEST/src/microcircuit/: .gitignore  .pylintrc  __init__.py  __main__.py  helpers.py  network.py  network_params.py  sim_params.py  stimulus_params.py
PyNEST/tests/: .gitignore  test_microcircuit.py
doc/: ModelDescription_CorticalMicrocircuit_PotjansDiesmann.tex  ModelDescription_microcircuit-PD14-model.tex  Snakefile  config.yaml
doc/figures/: NetworkSketch_Connectivity_CorticalMicrocircuit_PotjansDiesmann.py  NetworkSketch_microcircuit-PD14-model.fodg
docs/: ModelDescription_microcircuit-PD14-model.tex  Snakefile  config.yaml  detailed_description.md  implementation.md  index.md
docs/_static/css/: custom.css
docs/figures/: connectivity_microcircuit-PD14-model.py
docs/model_description/: ModelDescription_microcircuit-PD14-model.tex
docs/model_description/figures/: NetworkSketch_microcircuit-PD14-model.fodg  connectivity_microcircuit-PD14-model.py
docs/publications/: publications.bib
