# -*- coding: utf-8 -*-
#
# network.py
#
# This file is part of NEST.
#
# Copyright (C) 2004 The NEST Initiative
#
# NEST is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# NEST is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with NEST.  If not, see <http://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: GPL-2.0-or-later

[project]
name = "microcircuit"
description = "PyNEST implementation of the cortical microcircuit model of Potjans & Diesmann (2014)."
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Tom Tetzlaff", email = "t.tetzlaff@fz-juelich.de" },
    { name = "Johanna Senk", email = "j.senk@fz-juelich.de" }    
]

requires-python = ">=3.8"
dependencies = [
    "docopt-ng",
    "matplotlib",
    # "nest-simulator",   ## needs `pip install nest-simulator` to become available    
    "numpy",
    "psutil",
    "ruamel.yaml",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-xdist",
]

[metadata]
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-2.0-or-later",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/INM-6/microcircuit-PD14-model"
"Bug Tracker" = "https://github.com/INM-6/microcircuit-PD14-model/issues"

[project.scripts]
#run_microcircuit = "microcircuit.run_microcircuit:main"
microcircuit = "microcircuit.__main__:main"

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "flake8",
    "mypy",
    "pre-commit",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-xdist",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "pygments",
    "recommonmark",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
